<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    >
   
     <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:padding="10sp"
		>
		    <TextView
		        android:id="@+id/about_username"
			    android:layout_width="wrap_content"
			    android:layout_height="fill_parent"
			    android:text="@string/username"
		        android:textColor="@color/black"
			    android:textSize="24sp"
			    android:layout_marginTop="8sp"
			    android:layout_gravity="center"
			  />
		    		    
		    <TextView
		        android:id="@+id/about_url"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/url"
		        android:textColor="@color/blue_text_link"
			    android:textSize="16sp"
			    android:padding="8sp"
			    android:layout_gravity="center"
			    android:linksClickable="true"
			/>
		    
		    <Button
		        style="@style/button_filled"
		        android:id="@+id/button_logout"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/action_logout"
		        android:onClick="logoutBtnClicked"
			    android:layout_gravity="center"
			  />
	    
	    	<TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/about"
		        android:textColor="@color/black"
			    android:textSize="18sp"
			    android:layout_marginTop="30sp"
			/>
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/about_content"
		        android:textColor="@color/gray_deep"
			    android:textSize="16sp"
				android:autoLink="all"
			    android:padding="10sp"
			/>
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/header_1"
		        android:textColor="@color/black"
			    android:textSize="18sp"
			/>
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/about_section_1"
		        android:textColor="@color/gray_deep"
			    android:textSize="16sp"
			    android:padding="10sp"
				android:autoLink="all"
			/>
		    <TextView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/header_2"
		        android:textColor="@color/black"
			    android:textSize="18sp"
			/>
		    <TextView
			    android:id="@+id/about_section_2"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/about_section_2"
		        android:textColor="@color/gray_deep"
			    android:textSize="16sp"
			    android:padding="10sp"
			/>
    </LinearLayout>
   </ScrollView>