<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:focusable="false"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:maxWidth="144dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        />

	<TextView
	    android:id="@+id/tagline"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/tagline"
        android:textColor="@color/gray"
	    android:textSize="20sp"
	    android:padding="8sp"
	    android:layout_margin="30dp"
	    android:gravity="center"
	/>
	
    <Button
        style="@style/button"
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_margin="10sp"
        android:onClick="loginBtnClicked"
	/>
	 
</LinearLayout>	